syntax = "proto3";

message user_identification {
    string id = 1; // uuid
    string user_name = 2;
    string email_address = 3;
}