syntax = "proto3";

import "./user.proto"

message user_registered {
    google.protobuf.Timestamp time_stamp = 1;
    user user = 2;
}